--- a/.github/workflows/build-complex-slock.yml
+++ b/.github/workflows/build-complex-slock.yml
@@ -1,11 +1,13 @@
-name: C/C++ CI
+name: Build Complex SLock
 
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,22 +16,41 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
-        path: |
-          /var/cache/apt/archives
+        path: /var/cache/apt/archives
         key: ${{ runner.os }}-apt-${{ hashFiles('**/Makefile') }}
         restore-keys: |
           ${{ runner.os }}-apt-
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get upgrade -y && sudo apt install -y build-essential x11-xserver-utils libconfig-dev libdbus-1-dev libegl-dev libev-dev libgl-dev libepoxy-dev libpcre2-dev libpixman-1-dev libx11-xcb-dev libxcb1-dev libxcb-composite0-dev libxcb-damage0-dev libxcb-dpms0-dev libxcb-glx0-dev libxcb-image0-dev libxcb-present-dev libxcb-randr0-dev libxcb-render0-dev libxcb-render-util0-dev libxcb-shape0-dev libxcb-util-dev libxcb-xfixes0-dev libxext-dev meson ninja-build uthash-dev cmake libxft-dev libimlib2-dev libxinerama-dev libxcb-res0-dev libxrandr-dev libfreetype6-dev libfreetype-dev 
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          build-essential \
+          libx11-dev \
+          libxext-dev \
+          libxrandr-dev \
+          libxft-dev \
+          libimlib2-dev \
+          libfreetype6-dev \
+          libxinerama-dev \
+          libxcb-xinerama0-dev \
+          libpam0g-dev
 
-    - name: Clean Previous Build
+    - name: Clean previous build
       run: make clean
 
     - name: Build
       run: make
-      continue-on-error: true
+      
+    - name: Check build artifacts
+      run: |
+        if [ ! -f slock ]; then
+          echo "Build failed: slock binary not found"
+          exit 1
+        fi
 
-    - name: Check Build Failure
-      if: ${{ failure() }}
-      run: echo "Build failed. Investigate the logs for details." && exit 1
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: slock-binary
+        path: slock
